--- a/style/index.css
+++ b/style/index.css
@@ -1,1 +1,130 @@
-/* Add CSS styling here */
+/*CSS Reset*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+*{
+    box-sizing: border-box;
+    padding:0;
+    margin:0;
+    max-width:100%;
+    border:1px solid grey;
+}
+/*General Styles*/
+html{
+    font-size:62.5%;
+}
+body{
+    font-size:1.6rem;
+    background-color:#FBFFFB;
+    line-height:1.5;
+}
+h1{
+    color:white;
+    font-size:7rem;
+}
+h2{
+    color:black;
+    font-size:4rem;
+    margin-left:2%;
+    margin-top:1%;
+}
+button{
+    color:black;
+    background-color:white;
+    border:2px solid black;
+    font-size:2.5rem;
+}
+button:hover{
+    color:white;
+    background-color:red;
+}
+
+
+/*Header styles*/
+nav{
+    display:flex;
+    flex-direction: column;
+    text-align: center;
+}
+.top-bar{
+    display:flex;
+    justify-content: space-between;
+}
+.top-bar div{
+    padding-right: 5%;
+    padding-top: 2%;
+    padding-bottom: 2%;
+}
+
+.big-pic{
+    height:60vh;
+    background-image:url('../space2.jpeg');
+    background-size:cover;
+    background-repeat: no-repeat;
+    background-position: bottom;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    margin:5% 10%;
+}
+
+.big-pic button{
+    border:0;
+    padding: 1%;
+}
+/*middle section style*/
+.middle{
+    width:23%;
+    display:flex;
+    flex-wrap: wrap;
+    /* justify-content: space-between; */
+}
+
+
+/* 
+
+
+.big-pic button{
+    font-size:2rem;
+    color:black;
+} 
+.big-pic a{
+    padding: 10%;
+    margin:1%;
+    font-size:2rem;
+    color:black;
+}
+.big-pic a:hover{
+    color:red;
+    background-color:lightpink;
+} 
+
+
+
+footer content
+footer{
+    text-align: center;
+    margin-bottom:5%;
+    background-color:lightgray;
+} */
