--- a/style/index.css
+++ b/style/index.css
@@ -46,14 +46,16 @@ h1{
 h2{
     color:black;
     font-size:4rem;
-    margin-left:2%;
-    margin-top:3%;
 }
 button{
     color:black;
     background-color:white;
     border:2px solid black;
     font-size:2.5rem;
+}
+a{
+    
+    text-decoration: none;
 }
 button:hover{
     color:white;
@@ -70,22 +72,33 @@ nav{
 .top-bar{
     display:flex;
     justify-content: space-between;
+
+}
+.top-bar h2{
+    display:flex;
+    align-items: center;
+    margin-left:2%;
+    width:100%;
 }
 .top-bar div{
     display:flex;
-    margin-right:13%;
+    justify-content: flex-end;
+    align-items: center;
     padding-top: 2%;
     padding-bottom: 2%;
+    width:100%;
+    margin-right:2%;
 }
 .top-bar button{
-    margin-top:5%;
     font-size:2rem;
-    padding:5%;
+    padding:2%;
+    display:flex;
+    justify-content:center;
 }
 
 
 .big-pic{
-    height:60vh;
+    height:70vh;
     background-image:url('../space2.jpeg');
     background-size:cover;
     background-repeat: no-repeat;
@@ -93,14 +106,13 @@ nav{
     display:flex;
     flex-direction: column;
     justify-content: center;
-    text-align: center;
-    margin:5% 10%;
+    align-items: center;
+    margin: 0 10%;
 }
 
 .big-pic button{
     border:0;
     padding: 1%;
-    margin: 0 40%;
     border: 2px solid black;
 }
 .big-pic a{
@@ -108,21 +120,25 @@ nav{
     text-align: center;
 }
 /*middle section style*/
-.middle img{
-    width:27vw;
-}
+
 .middle{
     display:flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    justify-content: center;
     background-color:white;
-    margin:0 2%;
-    text-align: center;;
+    align-items: center;
+    text-align: center;
+    width:100%
 }
+.middle div{
+    width:32%;
+    padding:2%; 
+}
+
 .middle p{
     font-size:2.5rem;
 }
-
 
 /*footer content*/
 footer{
@@ -136,4 +152,59 @@ footer button{
     padding: 1%;
     color:black;
     border: 2px solid black;
+}
+/*Media Queries*/
+/*500px*/
+@media(max-width:500px){
+    .top-bar{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .top-bar h2{
+        width:50%;
+        margin: 0%;
+    }
+    .top-bar div{
+        flex-direction: column;
+        align-items: center;
+        margin: 0%;
+    }
+    .top-bar button{
+        font-size:3rem;
+        padding:3%;
+        width:30vw;
+    }
+    
+    h1{
+        font-size:5rem;
+        margin:0%;
+    }
+    .big-pic{
+        width:80%;
+        height:45vh;
+        background-image:url('../space2.jpeg');
+        background-size:cover;
+        background-repeat: no-repeat;
+        background-position: bottom;
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+        margin:5% 10%;
+    }
+    .middle div{
+        width:40%;
+    }
+    footer{
+        padding:5%;
+    }
+   
+
+}
+/*800px*/
+@media(max-width:800px){
+    .big-pic{
+        height:60vh;
+    }
 }
